--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.15"
+    "mongoose": "^4.4.15",
+    "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {},
   "scripts": {
