--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongoose": "^4.4.15",
     "multer": "^1.1.0",
     "multiparty": "^4.1.2",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "textangular": "^1.5.1"
   },
   "devDependencies": {},
   "scripts": {
