--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CS4550 at Northeastern University",
   "main": "server.js",
   "dependencies": {
+    "angular-ui-sortable": "^0.14.2",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
