--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.15",
     "multer": "^1.1.0",
     "multiparty": "^4.1.2",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
