--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "multiparty": "^4.1.2",
     "ng-file-upload": "^12.0.4",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {},
