--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multiparty": "^4.1.2",
     "ng-file-upload": "^12.0.4",
     "passport": "^0.3.2",
+    "passport-discord": "^0.1.1",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "textangular": "^1.5.1"
