--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.15",
+    "mongoose-text-search": "0.0.2",
     "multer": "^1.1.0",
     "multiparty": "^4.1.2",
     "ng-file-upload": "^12.0.4",
